# univapay-python

./: .env.example  .gitattributes  .gitignore  ProjectStructure.md  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  docs-deploy.yml
docs/: API.md  Configuration.md  Errors-and-Debugging.md  Examples.md  Quickstart.md  Using-with-Django-and-DRF.md  Using-with-FastAPI.md  Using-with-Python.md  Webhooks.md  Widgets.md  index.md
examples/: _common.py  charge_cancel.py  charge_capture.py  charge_one_time.py  charge_recurring.py  refund_create.py  refund_list.py  smoke_api.py  smoke_widget.py  subscription_cancel.py  subscription_create.py  subscription_get.py  token_check.py  webhook_verify_sample.py
examples/univapay_flask_demo/: .env.example  README.md  app.py  app.sqlite3  db.py  requirements.txt
examples/univapay_flask_demo/static/: app.js  styles.css  univapay-widget.js
examples/univapay_flask_demo/templates/: admin.html  index.html  layout.html  settings.html
site/: 404.html  index.html  objects.inv  sitemap.xml
site/API/: index.html
site/Configuration/: index.html
site/Errors-and-Debugging/: index.html
site/Examples/: index.html
site/Quickstart/: index.html
site/Using-with-Django-and-DRF/: index.html
site/Using-with-FastAPI/: index.html
site/Using-with-Python/: index.html
site/Webhooks/: index.html
site/Widgets/: index.html
site/search/: search_index.json
tests/: test_smoke.py
univapay/: __init__.py  auth.py  client.py  config.py  debug.py  errors.py  exceptions.py  models.py  utils.py  webhook.py  widget.py  widgets.py
univapay/frameworks/: __init__.py  django.py  fastapi.py  flask.py
univapay/resources/: __init__.py  cancels.py  charges.py  refunds.py  subscriptions.py  tokens.py  webhooks.py
