[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "univapay-python"
version = "0.1.0"
description = "Framework-agnostic Univapay SDK for Python (widgets + payments)."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Nayeem Islam", email = "islam.nayeem@outlook.com" },
]
maintainers = [
  { name = "Nayeem Islam", email = "islam.nayeem@outlook.com" },
]
keywords = [
  "univapay",
  "payments",
  "sdk",
  "subscription",
  "checkout",
  "widget",
  "webhooks",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Typing :: Typed",
]

dependencies = [
  "httpx>=0.27,<1.0",
  "pydantic>=2.5",
]

[project.optional-dependencies]
dotenv = ["python-dotenv>=1.0"]
dev = [
  "pytest>=7.0",
  "ruff>=0.4",
  "mypy>=1.8",
  "types-requests",
]

[project.urls]
Homepage = "https://github.com/NoManNayeem/Univapay-Python"
Repository = "https://github.com/NoManNayeem/Univapay-Python"
Issues = "https://github.com/NoManNayeem/Univapay-Python/issues"
Documentation = "https://github.com/NoManNayeem/Univapay-Python#readme"

[tool.hatch.build.targets.wheel]
# Package is at top-level
packages = ["univapay"]
include = [
  "README.md",
  "LICENSE*",
  "univapay/py.typed",
]

[tool.hatch.build.targets.sdist]
include = [
  "univapay/**",
  "univapay/py.typed",
  "README.md",
  "LICENSE*",
]

# Optional: basic tool configs you might find handy
[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "UP"]
ignore = []

[tool.mypy]
python_version = "3.9"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
