[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "univapay-python"
version = "0.1.0"
description = "Framework-agnostic Univapay SDK for Python (widgets + payments)."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Nayeem Islam", email = "islam.nayeem@outlook.com" },
]
maintainers = [
  { name = "Nayeem Islam", email = "islam.nayeem@outlook.com" },
]
keywords = [
  "univapay",
  "payments",
  "sdk",
  "subscription",
  "checkout",
  "widget",
  "webhooks",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Typing :: Typed",
]

dependencies = [
  "httpx>=0.27,<1.0",
  "pydantic>=2.5,<3.0",
]

[project.optional-dependencies]
dotenv = ["python-dotenv>=1.0"]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.8",
  "types-requests",      # drop if you don't use 'requests'
  "build>=1.2",
  "twine>=5.0",
]
docs = [
  "mkdocs>=1.5",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://github.com/NoManNayeem/univapay-python"
Repository = "https://github.com/NoManNayeem/univapay-python"
Issues = "https://github.com/NoManNayeem/univapay-python/issues"
Documentation = "https://nomanNayeem.github.io/univapay-python/"

[tool.hatch.build.targets.wheel]
# Package is at top-level
packages = ["univapay"]
include = [
  "README.md",
  "LICENSE*",
  "univapay/py.typed",
]

[tool.hatch.build.targets.sdist]
include = [
  "univapay/**",
  "univapay/py.typed",
  "README.md",
  "LICENSE*",
  "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "UP"]
ignore = []
extend-exclude = ["site", "examples", "knowledgebase", ".venv", ".ruff_cache", ".pytest_cache"]

[tool.mypy]
python_version = "3.9"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_typed = true
warn_untyped_fields = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
